fixing some spacing

--- a/blogposts/blogpost.css
+++ b/blogposts/blogpost.css
@@ -34,6 +34,10 @@
   width: 100%;
 }
 
+.blog-text-wrapper {
+  max-width: 100%;
+}
+
 .blog-info {
   display: flex;
   gap: 1.5rem;
